<resources>
    <string name="app_name">Mister Spoon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Salut les amis !</string>
    <string name="carte_toast_empty">Veuillez choisir des plats à pré-réserver.</string>
    <string name="fax">Fax :</string>
    <string name="tel">Téléphone :</string>
    <string name="web">Site Web :</string>
    <string name="mail">E-mail :</string>
    <string name="password">Password :</string>
    <string name="adress">Adresse :</string>
    <string name="mail_perso">E-mail personnel : </string>
    <string name="login">Login</string>
    <string name="log_in">LOG IN !</string>
    <string name="client">Client</string>
    <string name="restaurant">Restaurant</string>
    <string name="name">Nom :</string>
    <string name="capacity">Capacité :</string>
    <string name="gps">Coordonnée GPS :</string>
    <string name="gps2">,</string>
    <string name="gps_longitude">Longitude :</string>
    <string name="gps_latitude">Latitude :</string>
    <string name="numero">Numéro :</string>
    <string name="rue">Rue :</string>
    <string name="ville">Ville :</string>
    <string name="register">S\'enregister !</string>
    <string name="login_message">Si vous avez déjà un compte</string>
    <string name="register_message">Si vous n\'en avez pas</string>
    <string name="activity_login_like">Choose your side of the force</string>
    <string name="activity_login_light">Light</string>
    <string name="activity_login_dark">Dark</string>
    <string name="activity_login_toast">Veuillez entrer votre email</string>
    <string name="activity_login_toast_incorrect">Veuillez entrer un email valide</string>
    <string name="activity_register_toast_empty">Veuillez remplir tous les champs</string>
    <string name="activity_register_same_email">Cet email existe déjà</string>
    <string name="activity_register_same_phone">Ce numéro existe déjà</string>
    <string name="activity_register_same_gps">Cette coordonnée existe déjà</string>
    <string name="activity_register_same_name">Ce nom existe déjà</string>
    <string name="wrong_mdp">Mauvais mot de passe</string>
    <string name="exit_title">Communication système</string>
    <string name="exit">Voulez-vous vraiment quitter?</string>
    <string name="exit_confirm">Oui</string>
    <string name="exit_cancel">Non</string>
    <string name="profil_client_title">Votre profil</string>
    <string name="profil_client_email">Connecté en tant que </string>
    <string name="profil_client_name">Nom *</string>
    <string name="profil_client_gsm">GSM</string>
    <string name="profil_client_allergy_list">Allergies éventuelles</string>
    <string name="profil_client_allergy_gluten">gluten</string>
    <string name="profil_client_allergy_noix">noix</string>
    <string name="profil_client_allergy_cacahuete">cacahuète</string>
    <string name="profil_client_allergy_banane">banane</string>
    <string name="profil_client_allergy_gluten_test">gluten</string>
    <string name="profil_client_allergy_noix_test">noix</string>
    <string name="profil_client_allergy_cacahuete_test">cacahuete</string>
    <string name="profil_client_allergy_banane_test">banane</string>
    <string name="profil_client_new_specificity">Nouvelle spécificité</string>
    <string name="profil_client_specificity_list">Vos spécificités</string>
    <string name="profil_client_new_favourite_meal">Nouveau plat favori</string>
    <string name="profil_client_favourite_meal_list">Vos plats favoris</string>
    <string name="profil_client_new_favourite_restaurant">Nouveau restaurant favori</string>
    <string name="profil_client_favourite_restaurant_list">Vos restaurants favoris</string>
    <string name="profil_client_booking">Réservations</string>
    <string name="profil_client_prebooking">Pré-réservations</string>
    <string name="profil_client_update">Mettre à jour votre profil</string>
    <string name="profil_client_next">Passer à table!</string>
    <string name="profil_client_mandatory">* champs obligatoires</string>
    <string name="profil_client_alert_back">Annuler</string>
    <string name="profil_client_alert_update">Mettre à jour</string>
    <string name="profil_client_alert_message">Les éléments décochés seront supprimés</string>
    <string name="profil_client_alert_null">Il n\'y a aucun élément à afficher</string>
    <string name="profil_client_toast_mandatory">doit être rempli</string>
    <string name="profil_client_toast_already_exist">existe déjà dans notre base de donnée. Veuillez en choisir un autre.</string>
    <string name="profil_client_toast_uptodate">Informations mise à jour !</string>
    <string name="list_restaurant_filtre_note">Filtrer par note</string>
    <string name="list_restaurant_filtre_prix">Filtrer par prix</string>
    <string name="list_restaurant_filtre_favori">Filtrer par favori</string>
    <string name="list_restaurant_editText_note">Note</string>
    <string name="list_restaurant_editText_prix">Prix</string>
    <string name="list_restaurant_select">Suivant</string>
    <string name="list_restaurant_title">Liste restaurants</string>
    <string name="list_restaurant_toast">Veuillez sélectionner un restaurant</string>
    <string name="list_restaurant_toast_gps">Veuillez activer votre gps</string>
    <string name="list_city_title">Liste des villes</string>
    <string name="list_city_toast">Veuillez sélectionner une ville</string>
    <string name="reservation_restaurant_title">Réservations</string>
    <string name="reservation_restaurant_heure">Heure</string>
    <string name="reservation_restaurant_nom">Nom Client</string>
    <string name="reservation_restaurant_telephone">Téléphone/GSM</string>
    <string name="reservation_restaurant_places">Places</string>
    <string name="reservation_restaurant_quantite">Plats</string>
    <string name="reservation_restaurant_email">Email Client</string>
    <string name="prereservation_restaurant_title">Pré-réservations</string>
    <string name="reservation_client_title">Réservations</string>
    <string name="reservation_client_heure">Heure</string>
    <string name="reservation_client_nom">Nom Restaurant</string>
    <string name="reservation_client_telephone">Téléphone</string>
    <string name="reservation_client_places">Places</string>
    <string name="reservation_client_quantite">Plats</string>
    <string name="reservation_client_real_quantite">Quantités</string>
    <string name="reservation_client_echec">Vous avez entré de mauvaises données. Veuillez les vérifiez.</string>
    <string name="reservation_client_nbr_places">Nombre de places :</string>
    <string name="profil_restaurant_add_image">Ajouter une image</string>
    <string name="profil_restaurant_select_image">Sélectionner une image</string>
    <string name="profil_restaurant_fax">Fax :</string>
    <string name="profil_restaurant_tel">Tél :</string>
    <string name="profil_restaurant_web">Site Web :</string>
    <string name="profil_restaurant_mail">Connecté en tant que </string>
    <string name="profil_restaurant_adress">Adresse :</string>
    <string name="profil_restaurant_description">Description : </string>
    <string name="profil_restaurant_gps">Options GPS</string>
    <string name="profil_restaurant_add">Ajouter le resto !</string>
    <string name="profil_restaurant_cooks_button">Vos types de cuisine</string>
    <string name="profil_restaurant_advantages_button">Vos avantages</string>
    <string name="profil_restaurant_payments_button">Vos possibilités de paiement</string>
    <string name="profil_restaurant_closing_edit">ex: 05&#8211;01 (1er mai)</string>
    <string name="profil_restaurant_closing_button">Vos jours de fermeture annuelle</string>
    <string name="profil_restaurant_schedule_text">Ajouter une nouvelle tranche d\'ouverture :</string>
    <string name="profil_restaurant_schedule_1">Le</string>
    <string name="profil_restaurant_schedule_2">de</string>
    <string name="profil_restaurant_schedule_opentime">ex: 18:00:00</string>
    <string name="profil_restaurant_schedule_3">à</string>
    <string name="profil_restaurant_schedule_closetime">ex: 22:00:00</string>
    <string name="profil_restaurant_schedule_button">Votre horaire</string>
    <string name="profil_restaurant_reservation">Réserver</string>
    <string name="profil_restaurant_prereservation">Pré-réserver</string>
    <string name="profil_restaurant_carte">Afficher la carte</string>
    <string name="profil_restaurant_appliquer">Appliquer</string>
    <string name="profil_restaurant_title">Restaurant</string>
    <string name="profil_restaurant_mail_public">Email :</string>
    <string name="profil_restaurant_capacite">Capacité :</string>
    <string name="profil_restaurant_toast_gps">Ces coordonnées existent déjà</string>
    <string name="profil_restaurant_toast_phone">Ce numéro existe déjà</string>
    <string name="profil_restaurant_toast_missing">Veuillez entrer tous le champs</string>
    <string name="profil_restaurant_toast_resto">Restaurant ajouté avec succès !</string>
    <string name="resto_client_title">Restaurant</string>
    <string name="resto_gps_options">Que voulez-vous faire ?</string>
    <string name="resto_gps_itineraire">Itinéraire</string>
    <string name="resto_gps_show">Afficher sur la carte</string>
    <string name="resto_toast_client_position">Veuillez activer votre gps</string>
    <string name="resto_toast_client_gps">GPS désactivé</string>
    <string name="profil_restaurant_cooks_alert_traditional">Traditionnelle</string>
    <string name="profil_restaurant_cooks_alert_french">Française</string>
    <string name="profil_restaurant_cooks_alert_regional">Régionale</string>
    <string name="profil_restaurant_cooks_alert_fusion">Fusion</string>
    <string name="profil_restaurant_cooks_alert_molecular">Moléculaire</string>
    <string name="profil_restaurant_cooks_alert_seafood">Produits de la mer</string>
    <string name="profil_restaurant_cooks_alert_brewery">Brasserie</string>
    <string name="profil_restaurant_cooks_alert_pancakes">Crêpes</string>
    <string name="profil_restaurant_cooks_alert_mediterranean">Méditerranéenne</string>
    <string name="profil_restaurant_cooks_alert_maghreb">Maghreb</string>
    <string name="profil_restaurant_cooks_alert_oriental">Oriental</string>
    <string name="profil_restaurant_cooks_alert_asian">Asiatique</string>
    <string name="profil_restaurant_cooks_alert_other">Autres pays</string>
    <string name="profil_restaurant_advantages_alert_parking">Parking Privé</string>
    <string name="profil_restaurant_advantages_alert_lounge">Salon privé</string>
    <string name="profil_restaurant_advantages_alert_valet">Service voiturier</string>
    <string name="profil_restaurant_advantages_alert_vegetarian">Végétarien</string>
    <string name="profil_restaurant_advantages_alert_wifi">Wi-Fi</string>
    <string name="profil_restaurant_advantages_alert_disable">Accès Handicapés</string>
    <string name="profil_restaurant_advantages_alert_caterer">Service Traiteur</string>
    <string name="profil_restaurant_advantages_alert_terrace">Terrasse</string>
    <string name="profil_restaurant_advantages_alert_air_conditioning">Climatisation</string>
    <string name="carte_builder_create_menu">Créer le menu :</string>
    <string name="carte_builder_menu_name">Nom du menu :</string>
    <string name="carte_builder_price">Prix du menu :</string>
    <string name="carte_builder_add_meal_to_menu">avec comme premier plat :</string>
    <string name="carte_builder_add_menu_meal_name">Nom du plat :</string>
    <string name="carte_builder_add_menu_meal_price">Prix du plat :</string>
    <string name="carte_builder_add_meal_1">Ajouter le plat :</string>
    <string name="carte_builder_meal_name">Nom du plat :</string>
    <string name="carte_builder_meal_price">Prix du plat :</string>
    <string name="carte_builder_add_meal_2">au menu :</string>
</resources>